--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,9 @@ img, video, audio, iframe, table, form {
 
 /*////////// NAVBAR //////////*/
 
+header {
+  margin: 0 0 30px;
+}
 
 
 /*////////// LOGO //////////*/
